defining changes to figureout wrong

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+html lang="en">
 
 <head>
     <meta charset="UTF-8" />
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 
-<body>
-    <div class="slider">
+body>
+    <div class="slider"
         <div class="slide current">
             <div class="content">
                 <h1>Slide One</h1>
@@ -57,7 +57,7 @@
             </div>
         </div>
     </div>
-    <div class="buttons">
+    <div class="butto
         <button id="prev"><i class="fas fa-arrow-left"></i></button>
         <button id="next"><i class="fas fa-arrow-right"></i></button>
     </div>
